--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,15 @@
+@font-face {
+    font-family: 'Italiana', 'Roboto';
+    src: url('./Italiana/Italiana-Regular.ttf') format('ttf'),
+      url("./Roboto/Roboto-Regular.ttf") format("ttf");
+    font-weight: 600;
+    font-style: normal;
+  }  
+
 .hello {
     color: red;
-    background: url('./pinar-kucuk-Ae7jQFDTPk4-unsplash.jpeg');
+    font-family: "Italiana", serif;
+    font-family: "Roboto", sans-serif;
+    background: url("./pinar-kucuk-Ae7jQFDTPk4-unsplash.jpeg");
   }
 
