--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,25 @@
 /* Set height of body and the document to 100% to enable "full page tabs" */
-body, html {
+body {
     height: 100%;
     margin: 0;
     font-family: Arial;
+    background-color: rgb(80, 53, 53);
+  }
+
+  #content {
+    /* display: flex; */
+    min-height: 100vh;
+    margin: 0px;
+    padding: 0px;
+    /* justify-content: center; */
+    text-align: center;
+  }
+
+  .top-image {
+    margin: 25px;
   }
   
-  /* Style tab links */
+  /* /* Style tab links 
   .tablink {
     background-color: #555;
     color: white;
@@ -22,7 +36,7 @@ body, html {
     background-color: #777;
   }
   
-  /* Style the tab content (and add height:100% for full page content) */
+  /* Style the tab content (and add height:100% for full page content) 
   .tabcontent {
     color: white;
     display: none;
@@ -33,4 +47,13 @@ body, html {
   #Home {background-color: red;}
   #News {background-color: green;}
   #Contact {background-color: blue;}
-  #About {background-color: orange;}
+  #About {background-color: orange;} */
+
+
+.landing-page {
+  margin: 25px;
+}
+
+.landing-page-copy {
+  color: whitesmoke;
+}
