began creating js load file for landing page

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 /* Set height of body and the document to 100% to enable "full page tabs" */
 body {
-    background-color: rgb(80, 53, 53);
+    background-color: rgb(80, 53, 53, 0.5);
   }
 
   #content {
