--- a/src/style.css
+++ b/src/style.css
@@ -45,8 +45,8 @@ nav{
   width: 100%;
   height: 100vh;
   height: calc(100vh - 50px);
-  background: linear-gradient(rgba(8, 199, 247, 0.658), rgba(180, 36, 16, 0.356)), url(assets/kayleigh-harrington-yhn4okt6ci0-unsplash.jpeg) center no-repeat;
-  background-size: cover;
+  background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), url(assets/kayleigh-harrington-yhn4okt6ci0-unsplash.jpeg) center no-repeat;
+  background-size: auto;
   position: relative;
 }
 #home h1{
