Updated poutine pic and g logo

--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ nav{
 }
 .logo-con{
   display: block;
-  background:  url(images/logo.jpg) center no-repeat;
+  background:  url(../src/assets/134102134-g-letter-simple-elegant-floral-logo-icon-sign-design.webp) center no-repeat;
   background-size: contain;
   height: 90%;
   width: 100px;
