--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,7 @@ nav{
   justify-content: flex-end;
 }
 .nav-links a{
+  font-family: 'Alice', serif;
   text-decoration: none;
   color: whitesmoke;
   margin: 0 2vw;
@@ -41,7 +42,7 @@ nav{
   color: rgb(245, 245, 245, 0.75);
 }
 #home{
-  margin-top: 25px;
+  margin-top: 20px;
   width: 100%;
   height: 100vh;
   height: calc(100vh - 50px);
@@ -75,18 +76,19 @@ footer{
   align-items: center;
 }
 footer p{
-  color: white;
+  font-family: 'Alice', serif;
+  color: whitesmoke;
   font-size: 2vw;
   margin-bottom: 2vw;
 }
 footer span a{
-  color: white;
+  color: whitesmoke;
   font-size: 3vw;
   margin: 1vw;
   transition: color 0.5s;
 }
 footer a:hover{
-  color: red;
+  color: whitesmoke;
 }
 
 #grid-menu{
@@ -109,7 +111,7 @@ footer a:hover{
   margin-top: 5vw;
   font-size: 6vw;
   color: whitesmoke;
-  font-family: 'Mulish', sans-serif;
+  font-family: 'Alice', serif;
   text-shadow: 2px 2px 4px #000000;
 }
 .menu-tile h2{
@@ -118,7 +120,7 @@ footer a:hover{
   font-size: 2.5vw;
   color: whitesmoke;
   text-shadow: 2px 2px 4px #000000;
-  font-family: 'Mulish', sans-serif;
+  font-family: 'Alice', serif;
   width: fit-content;
   padding-bottom: 5px;
   border-bottom: 3px solid #080808;
@@ -127,6 +129,7 @@ footer a:hover{
   width: 100%;
   height: 75%;
   object-fit: cover;
+  align-items: center;
 }
 .menu-tile {
   height: 25vw;
@@ -151,7 +154,7 @@ footer a:hover{
   color: rgb(1, 1, 49);
   margin-bottom: 30px;
   padding-top: 15px;
-  font-family: 'Mulish', sans-serif;
+  font-family: 'Alice', serif;
   text-align: center;
 }
 form div{
@@ -162,7 +165,7 @@ form div{
 }
 form{
   margin-bottom: 70px;
-  background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), center no-repeat;
+  background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), center no-repeat ;
   background-size: auto;
 }
 form input[type="email"]{
@@ -175,11 +178,12 @@ form input[type="submit"]{
   width: 20%;
   font-size: 15px;
   font-weight: bold;
-  background-color: rgb(9, 1, 53);
+  background-color: rgb(8, 8, 8);
   color: white;
   border: 1px solid black;
 }
 #contact-div p{
+  font-family: 'Alice', serif;
   font-size: 20px;
   text-align: center;
   font-weight: bold;
