--- a/src/style.css
+++ b/src/style.css
@@ -139,10 +139,10 @@ footer a:hover{
 #contact-div{
   width: 500px;
   height: 50vh;
-  padding: 5%;
+  padding: 15%;
   background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), url(assets/14704985_1748000432131857_8641446346689085440_n.jpeg) center no-repeat;
   background-size: auto;
-  margin: 25vh auto;
+  margin: 0 auto; /* auto */
 }
 #contact-div form{
   width: 100%;
@@ -151,10 +151,11 @@ footer a:hover{
   background-size: auto;
 }
 #contact-div h1{
-  color: rgb(1, 1, 49);
+  color: whitesmoke;
   margin-bottom: 30px;
   padding-top: 15px;
   font-family: 'Alice', serif;
+  text-shadow: 2px 2px 4px #000000;
   text-align: center;
 }
 form div{
@@ -165,8 +166,6 @@ form div{
 }
 form{
   margin-bottom: 70px;
-  background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), center no-repeat ;
-  background-size: auto;
 }
 form input[type="email"]{
   width: 75%;
