--- a/src/style.css
+++ b/src/style.css
@@ -47,7 +47,7 @@ nav{
   height: 100vh;
   height: calc(100vh - 50px);
   background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), url(assets/kayleigh-harrington-yhn4okt6ci0-unsplash.jpeg) center no-repeat;
-  background-size: auto;
+  background-size: contain;
   position: relative;
 }
 #home h1{
@@ -60,8 +60,6 @@ nav{
   line-height: 8vw;
   width: 70%;
   text-shadow: 2px 2px 4px #000000;
-  /* -webkit-text-stroke-width: .05px;
-  -webkit-text-stroke-color: #080808; */
 }
 #home i{
   margin-left: 3vw;
@@ -139,19 +137,20 @@ footer a:hover{
 #contact-div{
   width: 500px;
   height: 50vh;
-  padding: 5%;
-  background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), center no-repeat;
+  padding: 15%;
+  background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), url(assets/14704985_1748000432131857_8641446346689085440_n.jpeg) center no-repeat;
   background-size: auto;
-  margin: 25vh auto;
+  margin: 0 auto;
 }
 #contact-div form{
   width: 100%;
   height: 60%;
-  background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), center no-repeat;
+  /* background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), center no-repeat; */
   background-size: auto;
 }
 #contact-div h1{
-  color: rgb(1, 1, 49);
+  color: whitesmoke;
+  text-shadow: 2px 2px 4px #000000;
   margin-bottom: 30px;
   padding-top: 15px;
   font-family: 'Alice', serif;
@@ -184,6 +183,8 @@ form input[type="submit"]{
 }
 #contact-div p{
   font-family: 'Alice', serif;
+  color: whitesmoke;
+  text-shadow: 2px 2px 4px #000000;
   font-size: 20px;
   text-align: center;
   font-weight: bold;
