--- a/src/style.css
+++ b/src/style.css
@@ -138,7 +138,7 @@ footer a:hover{
   width: 500px;
   height: 50vh;
   padding: 115%;
-  background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), url(assets/14704985_1748000432131857_8641446346689085440_n.jpeg) center no-repeat;
+  background: linear-gradient(rgba(35,51,41, 0.658), rgba(99,212,113, 0.356)), url(../src/assets/14704985_1748000432131857_8641446346689085440_n.jpeg) center no-repeat;
   background-size: auto;
   margin: 0 auto;
 }
